<resources>
    <string name="app_name">Binarchallenge5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pilih_lawanmu">Pilih Lawanmu</string>
    <string name="ervin_vs_pemain">%1$s vs PEMAIN</string>
    <string name="ervin_vs_cpu">%1$s vs CPU</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
</resources>