<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    tools:context=".ResultDialogFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/hasil_permainan"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_winner"
        tools:text="Siapa Yang Menang"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_lagi"
        android:textColor="@android:color/white"
        android:text="@string/main_lagi"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kembali_menu"
        android:text="@string/kembali_ke_menu"
        android:background="@color/colorAccent"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>